agregue un nuevo metodo de conexion

--- a/CarritoComprasJSP/web/index.html
+++ b/CarritoComprasJSP/web/index.html
@@ -39,7 +39,7 @@ and open the template in the editor.
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Terminar Compra"/></td>
+                <a href=""><td><input type="submit" value="Enviar"/></td></a>
                 </tr>
             </table>
         </form>
